sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:7: error: reassignment to val
      c=0
       ^AlgBubbleSort1:10: error: reassignment to val
        c=c+1
         ^