sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var echange=true
  var c=0
  while (echange){
    for (c<-0 to getValueCount()-2) {
      c=0
      if (!isSmaller(c,c+1)){
        swap(c+1,c)
        c=c+1
      }
    }
    if (c==0){
      echange=false
    }
  }
}
